welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:1: error: Missing closing brace `}' assumed here
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
^